<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- binding object of ViewModel to the XML layout -->
    <data>
        <variable
            name="viewModel"
            type="com.cs4520.assignment3.mvvm.MVVMViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarThumbVertical="@color/purple_700">

<LinearLayout
    android:id="@+id/mvvm_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background= "#ffb3ba"
    android:orientation="vertical"
    tools:context=".mvvm.MVVMFragment">

    <!-- MVVM Calculator label-->
    <TextView android:layout_weight="1"
        android:id="@+id/mvvmCalcLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="#A250D6"
        android:text="@string/mvvm_calculator_label"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp" />

    <!-- Organizes number entry buttons horizontally-->
    <LinearLayout android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/first_number"
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@{viewModel.userInput1}"/>

        <EditText
            android:id="@+id/editTextNumber2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/second_number"
            android:inputType="number"
            android:text="@{viewModel.userInput2}"/>
    </LinearLayout>

    <!-- Holds math operation buttons-->
    <TableLayout android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:gravity="center_horizontal">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <!-- Add -->
            <ImageButton
                android:id="@+id/add_button"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:backgroundTint="#37092F"
                android:contentDescription="@string/addition"
                android:scaleType="centerCrop"
                android:src="@drawable/add_symbol"
                android:text="@string/add"
                tools:layout_margin="10dp" />

            <!-- Subtract-->
            <ImageButton
                android:id="@+id/sub_button"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:backgroundTint="#1E0063"
                android:contentDescription="@string/subtraction"
                android:scaleType="centerCrop"
                android:src="@drawable/sub_symbol"
                android:text="@string/subtract"
                tools:layout_margin="10dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <!-- Multiply -->
            <ImageButton
                android:id="@+id/mult_button"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:backgroundTint="#005C05"
                android:contentDescription="@string/multiplication"
                android:scaleType="centerCrop"
                android:src="@drawable/mul_symbol"
                android:text="@string/multiply"
                tools:layout_margin="10dp" />

            <!-- Divide -->
            <ImageButton
                android:id="@+id/div_button"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:backgroundTint="#811A00"
                android:contentDescription="@string/division"
                android:scaleType="centerCrop"
                android:src="@drawable/div_symbol"
                android:text="@string/divide"
                tools:layout_margin="10dp" />
        </TableRow>
    </TableLayout>

    <!-- Organizes result label and number horizontally-->
    <LinearLayout android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:background="#009688"
            android:padding="10dp"
            android:text="@string/result"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/the_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center" />
    </LinearLayout>
</LinearLayout>
    </ScrollView>
</layout>